just left * bug and some more functionalities just starting to add tab button

--- a/test.html
+++ b/test.html
@@ -48,6 +48,7 @@
 
     <script>
         const text = document.getElementById('text-input');
+        console.log(document.execCommand);
 
         const execCommandHandler = (command, value = null) => {
             document.execCommand(command, false, value);
