--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         rel="stylesheet"
     />
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="../assets/scss/index.css" />
+    <link rel="stylesheet" href="./assets/scss/index.css" />
 </head>
 <body>
-    <div id="fullScreen" class="tool right"><img src="../assets/img/fullScreen.svg" alt="fullScreen Icon"></div>
-    <div id="info" class="tool left"><img src="../assets/img/info.svg" alt="info Icon"></div>
+    <div id="fullScreen" class="tool right"><img src="./assets/img/fullScreen.svg" alt="fullScreen Icon"></div>
+    <div id="info" class="tool left"><img src="./assets/img/info.svg" alt="info Icon"></div>
     <div id="overlay" style="display: none;"></div>
 
     <div class="container">
@@ -125,11 +125,11 @@
             </p>
         </div>
 
-        <button id="download" class="btnstyle"><img src="../assets/img/download.svg" alt="Download Icon"> Download</button>
+        <button id="download" class="btnstyle"><img src="./assets/img/download.svg" alt="Download Icon"> Download</button>
 
     </div>
 
     <!-- Script -->
-    <script src="../assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
