--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         <!-- README or Info Content -->
         <div id="infoContent" style="display: none;">
-            <h2>README for Web-Based Text Editor</h2>
+            <h2>INFO Text Editor</h2>
             <p><strong>Introduction:</strong> This web-based text editor allows you to create and format text with various features such as bold, italic, underline, strikethrough, superscript, subscript, text alignment, lists, undo/redo, and more.</p>
             <p><strong>Features:</strong></p>
             <ul>
