--- a/index.html
+++ b/index.html
@@ -125,11 +125,16 @@
             </p>
         </div>
 
-        <button id="download" class="btnstyle"><img src="./assets/img/download.svg" alt="Download Icon"> Download</button>
+        <div class="buttons">
+            <input type="file" id="upload" accept=".doc, .docx" style="display:none;">
+            <button id="uploadBtn" class="load"><img src="./assets/img/upload.svg" alt="Upload Icon">Upload a File</button>
+            <button id="download" class="load"><img src="./assets/img/download.svg" alt="Download Icon"> Download</button>
+        </div>
 
     </div>
 
     <!-- Script -->
+    
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
