changed to textara and cursor move method added

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
 
         <!-- Text input area -->
-        <div id="text-input" contenteditable="true"></div>
+        <div id="textArea" contenteditable="true"></div>
 
         <!-- README or Info Content -->
         <div id="infoContent" style="display: none;">
